--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
         "clean": "rimraf _site src/.11ty",
         "dev": "vite dev",
         "build": "vite build",
+        "postinstall": "cd node_modules/picocad-web-viewer && npm i && npm run build",
         "prebuild": "pnpm clean",
+        "predev": "pnpm clean",
         "preview": "vite preview"
     },
     "dependencies": {
         "@babel/core": "^7.20.12",
-        "preact": "^10.11.3",
-        "preact-render-to-string": "^5.2.6",
+        "lodash-es": "^4.17.21",
+        "picocad-web-viewer": "github:lucatronica/picocad-web-viewer",
+        "preact": "^10.11.1",
         "preactement": "^1.8.2",
-        "the-new-css-reset": "^1.8.3"
+        "the-new-css-reset": "^1.8.3",
+        "twemoji": "^14.0.2"
     },
     "devDependencies": {
         "@11ty/eleventy": "2.0.0",
@@ -28,10 +32,10 @@
         "@mxeff/prettier-config": "https://gitpkg.now.sh/mxeff/shared-configs/packages/prettier-config?prettier-config/v1.0.0",
         "@preact/preset-vite": "^2.4.0",
         "@types/glob": "^8.0.1",
+        "@types/lodash-es": "^4.17.6",
         "@types/node": "^18.11.18",
         "@typescript-eslint/eslint-plugin": "^5.48.2",
         "@typescript-eslint/parser": "^5.48.2",
-        "decache": "^4.6.1",
         "esbuild": "^0.17.6",
         "eslint": "^8.32.0",
         "eslint-config-preact": "^1.3.0",
@@ -42,6 +46,7 @@
         "eslint-plugin-react": "^7.32.1",
         "glob": "^8.1.0",
         "jest": "^29.4.1",
+        "preact-render-to-string": "^5.2.6",
         "prettier": "^2.8.3",
         "rimraf": "^4.1.1",
         "sass": "^1.58.3",
